--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
       <button class="md:hidden"><i class="fa-solid fa-bars text-xl"></i></button>
   </div>
 </header>
-<section id="About" class="pt-24 h-[800px] bg-gradient-to-br from-blue-50 to-white">
+<section id="about" class="pt-24 h-[800px] bg-gradient-to-br from-blue-50 to-white">
   <div class="container mx-auto px-4 flex flex-col md:flex-row items-center">
       <div class="md:w-1/2 space-y-6">
           <h1 class="text-4xl md:text-5xl font-bold text-gray-900">
