--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                       <span><i class="fa-solid fa-ruler"></i> 1,600 sq ft</span>
                   </div>
                   <p class="text-gray-600">Original hardwood floors, a cozy fireplace, and a big backyard for entertaining.</p>
-                  <button href ="listing.html" class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition">View More</button>
+                  <a href ="listing.html" class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition">View More</a>
               </div>
           </div>
           <div class="bg-white rounded-xl shadow-lg overflow-hidden">
@@ -635,7 +635,7 @@
                       <span><i class="fa-solid fa-ruler"></i> 1,400 sq ft</span>
                   </div>
                   <p class="text-gray-600">Rooftop deck, sleek interior finishes, and easy access to restaurants & shops.</p>
-                  <button href ="listing.html" class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition">View More</button>
+                  <a href ="listing.html" class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition">View More</a>
               </div>
           </div>
           <div class="bg-white rounded-xl shadow-lg overflow-hidden">
@@ -648,7 +648,7 @@
                       <span><i class="fa-solid fa-ruler"></i> 2,200 sq ft</span>
                   </div>
                   <p class="text-gray-600">Huge kitchen for cooking enthusiasts, spacious backyard, and a quiet neighborhood.</p>
-                  <button href ="listing.html" class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition">View More</button>
+                  <a href ="listing.html" class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition">View More</a>
               </div>
           </div>
       </div>
