--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                       <span><i class="fa-solid fa-ruler"></i> 1,600 sq ft</span>
                   </div>
                   <p class="text-gray-600">Original hardwood floors, a cozy fireplace, and a big backyard for entertaining.</p>
-                  <a href ="listing.html" class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition">View More</a>
+                  <a href="listing.html" class="block w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition mt-4">View More</a>
               </div>
           </div>
           <div class="bg-white rounded-xl shadow-lg overflow-hidden">
