--- a/listing.html
+++ b/listing.html
@@ -577,16 +577,18 @@
     };
 </script>
 </head>
-        <body class="h-full text-base-content">
-          <div id="property-listing" class="bg-white">
-<header id="header" class="fixed top-0 left-0 right-0 bg-white shadow-sm z-50 px-6 py-4">
-  <div class="max-w-7xl mx-auto flex justify-between items-center">
-      <div class="flex items-center gap-2">
-          <i class="fa-solid fa-house text-blue-600 text-2xl"></i>
-          <span class="text-xl font-semibold">DreamHome</span>
-      </div>
-      <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">Contact Agent</button>
-  </div>
+                <body class="h-full text-base-content">
+          <div id="main" class="bg-white">
+<header id="header" class="fixed w-full bg-white/95 backdrop-blur-sm shadow-sm z-50 py-4">
+    <div class="container mx-auto px-4 flex justify-between items-center">
+        <div class="text-2xl font-bold text-blue-600">Jordan Smith</div>
+            <nav class="hidden md:flex space-x-6">
+                <a href="index.html/about" class="hover:text-blue-600">About</a>
+                <a href="index.html/listings" class="hover:text-blue-600">Listings</a>
+                <a href="index.html/contact" class="hover:text-blue-600">Contact</a>
+            </nav>
+            <button class="md:hidden"><i class="fa-solid fa-bars text-xl"></i></button>
+        </div>
 </header>
 <section id="hero" class="pt-20">
   <div class="relative h-[600px]">
