--- a/listing.html
+++ b/listing.html
@@ -583,9 +583,9 @@
     <div class="container mx-auto px-4 flex justify-between items-center">
         <div class="text-2xl font-bold text-blue-600">Jordan Smith</div>
             <nav class="hidden md:flex space-x-6">
-                <a href="index.html/about" class="hover:text-blue-600">About</a>
-                <a href="index.html/listings" class="hover:text-blue-600">Listings</a>
-                <a href="index.html/contact" class="hover:text-blue-600">Contact</a>
+                <a href="#about" class="hover:text-blue-600">About</a>
+                <a href="#listings" class="hover:text-blue-600">Listings</a>
+                <a href="#contact" class="hover:text-blue-600">Contact</a>
             </nav>
             <button class="md:hidden"><i class="fa-solid fa-bars text-xl"></i></button>
         </div>
@@ -706,8 +706,7 @@
   <section id="contact" class="bg-gray-50 rounded-2xl p-12 text-center">
       <h2 class="text-3xl font-bold mb-6">Love What You See? Let's Make It Yours!</h2>
       <div class="flex justify-center gap-4 mb-8">
-          <button class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700">Schedule a Tour</button>
-          <button class="border border-blue-600 text-blue-600 px-8 py-3 rounded-lg hover:bg-blue-50">Contact Agent</button>
+          <button href= "#contact" class="border border-blue-600 text-blue-600 px-8 py-3 rounded-lg hover:bg-blue-50">Contact Agent</button>
       </div>
       <div class="flex items-center justify-center gap-8">
           <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-1.jpg" class="w-16 h-16 rounded-full" alt="Agent Photo" />
