--- a/listing.html
+++ b/listing.html
@@ -583,9 +583,9 @@
     <div class="container mx-auto px-4 flex justify-between items-center">
         <div class="text-2xl font-bold text-blue-600">Jordan Smith</div>
             <nav class="hidden md:flex space-x-6">
-                <a href="#about" class="hover:text-blue-600">About</a>
-                <a href="#listings" class="hover:text-blue-600">Listings</a>
-                <a href="#contact" class="hover:text-blue-600">Contact</a>
+                <a href="index.html#about" class="hover:text-blue-600">About</a>
+                <a href="index.html#listings" class="hover:text-blue-600">Listings</a>
+                <a href="index.html#contact" class="hover:text-blue-600">Contact</a>
             </nav>
             <button class="md:hidden"><i class="fa-solid fa-bars text-xl"></i></button>
         </div>
