--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
           <p class="text-xl text-gray-600 leading-relaxed">
               I've helped dozens of clients buy and sell homes in the heart of Seattle. When I'm not showing properties, I'm usually fueling up on fresh coffee or taking my pup on a walk through the local park.
           </p>
-          <button class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-700 transition">
+          <button href="#listings" class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-700 transition">
               Let's Talk Homes! <i class="fa-solid fa-arrow-right ml-2"></i>
           </button>
       </div>
