--- a/index.html
+++ b/index.html
@@ -599,9 +599,7 @@
           <p class="text-xl text-gray-600 leading-relaxed">
               I've helped dozens of clients buy and sell homes in the heart of Seattle. When I'm not showing properties, I'm usually fueling up on fresh coffee or taking my pup on a walk through the local park.
           </p>
-          <button href="#listings" class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-700 transition">
-              Let's Talk Homes! <i class="fa-solid fa-arrow-right ml-2"></i>
-          </button>
+          <a href="#listings" class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-700 transition inline-block" role="button">Let's Talk Homes!<i class="fa-solid fa-arrow-right ml-2"></i></a>
       </div>
       <div class="md:w-1/2 mt-8 md:mt-0">
           <img class="rounded-2xl shadow-xl" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/6a948bafd4-8170fb1257146076e821.png" alt="professional real estate agent portrait, friendly smile, modern office background, high quality, natural lighting" >
