--- a/listing.html
+++ b/listing.html
@@ -612,8 +612,7 @@
               </p>
           </div>
           <div class="flex gap-3">
-              <button class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700">Schedule a Tour</button>
-              <button class="border border-blue-600 text-blue-600 px-8 py-3 rounded-lg hover:bg-blue-50">Contact Agent</button>
+              <a href="#listings" class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-700 transition inline-block" role="button">Let's Talk Homes! <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
       </div>
       <div class="flex gap-8 mt-8 text-gray-600">
@@ -705,15 +704,12 @@
   </section>
   <section id="contact" class="bg-gray-50 rounded-2xl p-12 text-center">
       <h2 class="text-3xl font-bold mb-6">Love What You See? Let's Make It Yours!</h2>
-      <div class="flex justify-center gap-4 mb-8">
-          <button href= "#contact" class="border border-blue-600 text-blue-600 px-8 py-3 rounded-lg hover:bg-blue-50">Contact Agent</button>
-      </div>
       <div class="flex items-center justify-center gap-8">
           <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-1.jpg" class="w-16 h-16 rounded-full" alt="Agent Photo" />
           <div class="text-left">
-              <p class="font-semibold">Sarah Johnson</p>
+              <p class="font-semibold">Jordan Smith</p>
               <p class="text-gray-600">(555) 123-4567</p>
-              <p class="text-gray-600">sarah@dreamhome.com</p>
+              <p class="text-gray-600">contact@jsmith.com</p>
           </div>
       </div>
   </section>
@@ -722,7 +718,7 @@
   <div class="max-w-7xl mx-auto px-6 flex justify-between items-center">
       <div class="flex items-center gap-2">
           <i class="fa-solid fa-house text-blue-600 text-2xl"></i>
-          <span class="text-xl font-semibold">DreamHome</span>
+          <span class="text-xl font-semibold">Jordan Smith</span>
       </div>
       <div class="flex gap-6 text-gray-600">
           <span  class="hover:text-blue-600 cursor-pointer"><i class="fa-brands fa-facebook text-xl"></i></span>
