--- a/listing.html
+++ b/listing.html
@@ -612,7 +612,7 @@
               </p>
           </div>
           <div class="flex gap-3">
-              <a href="#listings" class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-700 transition inline-block" role="button">Let's Talk Homes! <i class="fa-solid fa-arrow-right ml-2"></i></a>
+              <a href="#contact" class="bg-blue-600 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-700 transition inline-block" role="button">Contact Me <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
       </div>
       <div class="flex gap-8 mt-8 text-gray-600">
